# containers

./: .gitignore  CHANGELOG.md  README.md  build.sh
.claude/skills/: build-container.json
bigstitcher/2.4.1-spark3.2.1-jdk8/: Dockerfile
bigstitcher/2.4.1-spark3.3.2-scala2.12-java17-ubuntu24.04/: Dockerfile
bigstitcher/2.4.1-spark3.3.2-scala2.12-java8-ubuntu/: Dockerfile
bigstream/1.2.9-dask2023.10.1-py11/: Dockerfile  conda-env.yaml
bigstream/1.2.9-dask2024.4.1-py11/: Dockerfile
bigstream/1.3.0-dask2024.4.1-py11/: Dockerfile
bigstream/1.3.1-dask2024.4.1-py11/: Dockerfile
bigstream/1.3.2-dask2024.4.1-py11/: Dockerfile
bigstream/4.0.0-dask2024.12.1-py11-dev/: Dockerfile
bigstream/5.0.1-dask2025.1.0-py12/: Dockerfile
bigstream/5.0.2-dask2025.1.0-py12/: Dockerfile
cellpose/4.0.6-dask2025.5.1-py12/scripts/python/: main_distributed_cellpose.py  pyproject.toml  setup.py
cellpose/4.0.6-dask2025.5.1-py12/scripts/python/distributed_cellpose/: impl_v1.py  impl_v2.py
cellpose/4.0.6-dask2025.5.1-py12/scripts/python/io_utils/: __init__.py  write_utils.py  zarr_utils.py
cellpose/4.0.6-dask2025.5.1-py12/scripts/python/segmentation/: cellpose.py
cellpose/4.0.6-dask2025.5.1-py12/scripts/python/tools/: main_distributed_cellpose.py
fishspots/0.5.0-ome-dask2025.5.1-py12-ol9/scripts/python/: pyproject.toml
fishspots/0.5.0-ome-dask2025.5.1-py12-ol9/scripts/python/distributed_tools/: configure_dask.py  distribute.py  main_spot_extraction.py
fishspots/0.5.0-ome-dask2025.5.1-py12-ol9/scripts/python/io_utils/: read_utils.py  zarr_utils.py
(+173 files in other folders)
