[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose-tools"
version = "4.0.6"
description = "Tools for running distributed cellpose for large images"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "cellpose==4.0.6",
    "dask==2025.5.1",
    "distributed==2025.5.1",
    "numpy>=1.26.0,<2",
    "zarr>=2.18,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "io_utils",
    "segmentation",
    "tools",
    "utils",
]
